# monorepo

./: .gitignore  BUILD  WORKSPACE  go.mod  go.sum
client/: BUILD  deployment.yaml  main.go
protobuf/: BUILD  hello.proto
server/: BUILD  deployment.yaml  main.go  service.yaml
web/: BUILD.bazel  main.go
