load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "h2o3.com/demo/web",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gofiber_fiber_v2//:go_default_library",
        "@com_github_gofiber_fiber_v2//middleware/logger:go_default_library",
        "@com_github_gofiber_fiber_v2//middleware/recover:go_default_library",
    ],
)

go_binary(
    name = "web",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
